fix partial cues when controls are visible

--- a/src/scss/skin-modern/components/_subtitleoverlay.scss
+++ b/src/scss/skin-modern/components/_subtitleoverlay.scss
@@ -37,6 +37,7 @@
     @include text-border($subtitle-text-border-color);
 
     color: $subtitle-text-color;
+    height: fit-content;
 
     // Break labels into separate lines
     // sass-lint:disable force-pseudo-nesting
